Bug 1179691 - [Automounter] Fix the problem of get format and share request in the same time. r=dhylands